[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/menu_buttons.tres" type="Theme" id=1]
[ext_resource path="res://screens/options/audio_options_screen.gd" type="Script" id=2]

[node name="audio_options_screen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -392.0
margin_top = 221.0
margin_right = 397.0
margin_bottom = -178.0
color = Color( 0.164706, 0.0196078, 0.0196078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -332.0
margin_top = 258.0
margin_right = 333.0

[node name="toggle_mute" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 665.0
margin_bottom = 73.0
theme = ExtResource( 1 )
text = "Mute all audio [M]"

[node name="toggle_mute_music" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 77.0
margin_right = 665.0
margin_bottom = 150.0
theme = ExtResource( 1 )
text = "Mute only the music [N]"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 665.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 20 )

[node name="text_volume_master" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 665.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Master Volume
"
text = "Master Volume
"
scroll_active = false

[node name="slider_master" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 242.0
margin_right = 665.0
margin_bottom = 258.0
theme = ExtResource( 1 )
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 665.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 20 )

[node name="text_volume_music" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 286.0
margin_right = 665.0
margin_bottom = 346.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Music Volume"
text = "Music Volume"
scroll_active = false

[node name="slider_music" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 350.0
margin_right = 665.0
margin_bottom = 366.0
theme = ExtResource( 1 )
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 665.0
margin_bottom = 390.0
rect_min_size = Vector2( 0, 20 )

[node name="text_volume_sounds" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 394.0
margin_right = 665.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Sounds Volume"
text = "Sounds Volume"
scroll_active = false

[node name="slider_sounds" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 458.0
margin_right = 665.0
margin_bottom = 474.0
theme = ExtResource( 1 )
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 478.0
margin_right = 665.0
margin_bottom = 498.0
rect_min_size = Vector2( 0, 20 )

[node name="text_volume_ambiance" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 502.0
margin_right = 665.0
margin_bottom = 562.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Ambiance  Volume"
text = "Ambiance  Volume"
scroll_active = false

[node name="slider_ambiance" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 566.0
margin_right = 665.0
margin_bottom = 582.0
rect_min_size = Vector2( 0, 10 )
hint_tooltip = "When pressing [C] or [CTRL] to crouch:
- Selected: press a second time to rise up
- Deselected: release the key to rise up"
theme = ExtResource( 1 )
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 5
ticks_on_borders = true
